@@ -1,6 +1,8 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - improve exceptions for responses which contain the error message in a
+      key named 'errors' in addition to 'blocking-errors'
 
 0.001004  2020-01-22 14:30:27+01:00 Europe/Vienna
     - fix error handling of responses which contain the error message in a key
